# cpp_playground_task_modular_exponention

./: CMakeLists.txt  Readme.md  build.sh  docker-compose.yaml
.devcontainer/: Dockerfile  Dockerfile.heavy  devcontainer.json
accepture/: input.txt  result.check.txt
cmake/: config.h.in
doc/: links.txt
src/: PowerMantgomery.hpp  PowerSimple.hpp  main.cpp
test/: CMakeLists.txt
test/src/: unit-PowerSimple.cpp
